# hello_world_cpp

./: .gitignore  CMakeLists.txt  Jenkinsfile  version.cmake
include/: library.hpp  version.hpp
src/: library.cpp  version.cpp.in
test/: CMakeLists.txt  main.cpp  test_library.cpp
